--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 		<spring.version>5.1.2.RELEASE</spring.version>
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
-		<sonar.host.url>http://http://54.89.28.211:9000/</sonar.host.url>
+		<sonar.host.url>http://54.89.28.211:9000/</sonar.host.url>
 		<sonar.login>admin</sonar.login>
 		<sonar.password>1Jason!</sonar.password> 
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -98,13 +98,13 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>Mahesh Releases Nexus Repository</name>
-	      <url>http://http://54.237.224.16:8081/repository/amazon-release/</url>
+	      <url>http://54.237.224.16:8081/repository/amazon-release/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>Mahesh Snapshot Nexus Repository </name>
-	      <url>http://http://54.237.224.16:8081/repository/amazon-snapshot/</url>
+	      <url>http://54.237.224.16:8081/repository/amazon-snapshot/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
